--- a/Menu_SideBar_Ios_Academy/Base.lproj/Main.storyboard
+++ b/Menu_SideBar_Ios_Academy/Base.lproj/Main.storyboard
@@ -7,7 +7,7 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--HOME-->
         <scene sceneID="tne-QT-ifu">
             <objects>
                 <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="Menu_SideBar_Ios_Academy" customModuleProvider="target" sceneMemberID="viewController">
@@ -17,8 +17,12 @@
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
-                    <navigationItem key="navigationItem" id="01h-Tq-QhW">
-                        <barButtonItem key="leftBarButtonItem" image="line.horizontal.3" catalog="system" id="Q2V-fv-P4m"/>
+                    <navigationItem key="navigationItem" title="HOME" id="01h-Tq-QhW">
+                        <barButtonItem key="leftBarButtonItem" image="line.horizontal.3" catalog="system" id="Q2V-fv-P4m">
+                            <connections>
+                                <action selector="didTappedMenubar:" destination="BYZ-38-t0r" id="pvk-lX-iXP"/>
+                            </connections>
+                        </barButtonItem>
                     </navigationItem>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
